--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
-    <object class="" data="CV-Full-Stack-Developer-Xavier-Astor.pdf" type="application/pdf" width="100%" height="100%">
-        <embed src="{{ MEDIA_URL }}{{ event.file }}" type="application/pdf">
-            <a href="{{ MEDIA_URL }}{{ event.file }}">Download PDF</a>
-        </embed>
-    </object>
+<!-- PDF Document - All Browsers -->
+<object class="" data="CV-Full-Stack-Developer-Xavier-Astor.pdf" type="application/pdf" width="100%" height="100%">
+    <embed src="CV-Full-Stack-Developer-Xavier-Astor.pdf" type="application/pdf">
+        <a href="CV-Full-Stack-Developer-Xavier-Astor.pdf">Download PDF</a>
+    </embed>
+</object>
