Better line if viewing pdf isn't enabled

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- PDF Document - All Browsers -->
 <object class="" data="CV-Full-Stack-Developer-Xavier-Astor.pdf" type="application/pdf" width="100%" height="100%">
     <embed src="CV-Full-Stack-Developer-Xavier-Astor.pdf" type="application/pdf">
-        <a href="CV-Full-Stack-Developer-Xavier-Astor.pdf">Download PDF</a>
+        <br><p>Your browser does not support viewing pdf files. <br><a href="CV-Full-Stack-Developer-Xavier-Astor.pdf">DOWNLOAD PDF</a>.</p>
     </embed>
 </object>
