Image names updated

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="row no-gutters">
             <div class="col-sm-12">
                 
-            <img class="img-fluid rounded mt-5" src="static/img/CV-Full-Stack-Developer-Xavier-Astor-1.png"></img>
-            <img class="img-fluid rounded mt-3" src="static/img/CV-Full-Stack-Developer-Xavier-Astor-2.png"></img>
+            <img class="img-fluid rounded mt-5" src="static/img/CV-Full-Stack-Software-Developer-Xavier-Astor-1.png">
+            <img class="img-fluid rounded mt-3" src="static/img/CV-Full-Stack-Software-Developer-Xavier-Astor-2.png">
             <a href="static/pdf/CV-Full-Stack-Developer-Xavier-Astor.pdf"><button type="button" class="btn btn-info btn-lg btn-block txt-lg rounded my-5">PDF VERSION</button></a>
             
             </div>
